fixed images size on mobile device home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1414,6 +1414,12 @@ img.shoppingcart {
     left: 0 !important;
 	}
 	
+	img.review1, img.review2, img.review3 {
+    width: 300px;
+    height: 300px;
+    border-radius: 200px;
+}
+	
 	p.comfortSeason {
     margin-bottom: 25px;
     position: relative;
